@@ -44,6 +44,12 @@ TIME ZONES
 	the 'TZ' environment variable appropriately: a list of known
 	timezones is given in share/zoneinfo/zones.tab.
 
+	Since Windows C runtime does not think that times prior to
+	1970-01-01 00:01 *in Seattle* are valid, heuristics had to be
+	used for the timezones pre-1970.  Now the database is used
+	back to 1902, before the days of DST and when the concept of
+	time zones is rather vague.
+
 
 PACKAGE INSTALLATION
 
